refactor twig template folder structure

--- a/src/App/views/templates/login.html.twig
+++ b/src/App/views/templates/login.html.twig
@@ -11,7 +11,7 @@
 
 <body>
 
-{{ include('_navbar.html.twig') }}
+{{ include('partial_view/_navbar.html.twig') }}
 
 <div class="container login">
     <div class="row mt-5 temp-height">
@@ -45,7 +45,7 @@
     </div>
 </div>
 
-{{ include('_footer.html.twig') }}
+{{ include('partial_view/_footer.html.twig') }}
 
 <script src="https://kit.fontawesome.com/a41dcf7e67.js" crossorigin="anonymous"></script>
 </body>
