--- a/src/App/views/templates/movie/show-all-movies.html.twig
+++ b/src/App/views/templates/movie/show-all-movies.html.twig
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-{{ include('_navbar.html.twig', {username: username}) }}
+{{ include('partial_view/_navbar.html.twig', {username: username}) }}
 
 <div class="container">
     <div class="row mt-5 temp-height">
@@ -42,7 +42,7 @@
     </div>
 </div>
 
-{{ include('_footer.html.twig') }}
+{{ include('partial_view/_footer.html.twig') }}
 
 <script src="https://kit.fontawesome.com/a41dcf7e67.js" crossorigin="anonymous"></script>
 </body>
