--- a/src/App/views/templates/movie/update-movie.html.twig
+++ b/src/App/views/templates/movie/update-movie.html.twig
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-{{ include('_navbar.html.twig', {username: user.username}) }}
+{{ include('partial_view/_navbar.html.twig', {username: user.username}) }}
 
 <div class="container update-form">
     <div class="row mt-5 temp-height">
@@ -60,7 +60,7 @@
 </div>
 
 
-{{ include('_footer.html.twig') }}
+{{ include('partial_view/_footer.html.twig') }}
 
 <script src="https://kit.fontawesome.com/a41dcf7e67.js" crossorigin="anonymous"></script>
 </body>
