--- a/src/App/views/templates/user/create-user-form.html.twig
+++ b/src/App/views/templates/user/create-user-form.html.twig
@@ -10,7 +10,7 @@
 
 <body>
 
-{{ include('_navbar.html.twig', {username: currentUser}) }}
+{{ include('partial_view/_navbar.html.twig', {username: currentUser}) }}
 
 <div class="container create-user">
     <div class="row mt-5 temp-height">
