--- a/src/App/views/templates/movie/show-movie.html.twig
+++ b/src/App/views/templates/movie/show-movie.html.twig
@@ -8,7 +8,7 @@
     <style>{{ source('main.css') }}</style>
 </head>
 <body>
-{{ include('_navbar.html.twig', {username: username}) }}
+{{ include('partial_view/_navbar.html.twig', {username: username}) }}
 
 
 <div class="container">
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-{{ include('_footer.html.twig') }}
+{{ include('partial_view/_footer.html.twig') }}
 
 <script src="https://kit.fontawesome.com/a41dcf7e67.js" crossorigin="anonymous"></script>
 </div>
