--- a/src/App/views/templates/user/update-user.html.twig
+++ b/src/App/views/templates/user/update-user.html.twig
@@ -26,9 +26,9 @@
 <body>
 
 {% if isForeignProfile %}
-    {{ include('_navbar.html.twig', {username: currentUser}) }}
+    {{ include('partial_view/_navbar.html.twig', {username: currentUser}) }}
 {% else %}
-    {{ include('_navbar.html.twig', {username: user.username}) }}
+    {{ include('partial_view/_navbar.html.twig', {username: user.username}) }}
 {% endif %}
 
 
@@ -93,7 +93,7 @@
 </div>
 
 
-{{ include('_footer.html.twig') }}
+{{ include('partial_view/_footer.html.twig') }}
 
 <script src="https://kit.fontawesome.com/a41dcf7e67.js" crossorigin="anonymous"></script>
 </body>
