logo: no link when not logged in

--- a/src/App/views/templates/login.html.twig
+++ b/src/App/views/templates/login.html.twig
@@ -11,7 +11,7 @@
 
 <body>
 
-{{ include('partial_view/_navbar.html.twig') }}
+{{ include('partial_view/_navbar.html.twig', {noLink: true}) }}
 
 <div class="container login">
     <div class="row mt-5 temp-height">
