view create movie

--- a/src/App/views/templates/home.html.twig
+++ b/src/App/views/templates/home.html.twig
@@ -31,6 +31,7 @@
             {% if permissions.r_show %}
                 <p class="h5 pt-3"><i class="fa-solid fa-clapperboard"></i><span class="tabulator"></span>Manage Shows</p>
                 <ul>
+                    <li><a href="/movie/new" class="text-reset">Create a new Movie</a></li>
                     <li><a href="/movies" class="text-reset">Visit Movie Overview</a></li>
                     <li><a href="" class="text-reset">Visit TV Series Overview</a></li>
                 </ul>
