--- a/src/App/views/templates/movie/show-movie.html.twig
+++ b/src/App/views/templates/movie/show-movie.html.twig
@@ -43,7 +43,7 @@
             {% endif %}
 
             <form action='/movies' method="post" name="back-movie-overview" class="mt-2">
-                <input type="submit" name="submit" value="Back">
+                <input type="submit" name="submit" value="All Movies">
             </form>
 
         </div>
