--- a/src/App/views/templates/movie/show-movie.html.twig
+++ b/src/App/views/templates/movie/show-movie.html.twig
@@ -36,7 +36,7 @@
             {% endif %}
 
             {% if permissions.d_show %}
-                <form action='/movie/delete' method="post" name="movie-deletion" class="mt-2">
+                <form action='/movie/delete' method="post" name="movie-deletion" class="mt-2" onsubmit="return confirm('Do you really want to delete this movie?')">
                     <input type="hidden" name="id" value="{{ movie.id }}">
                     <input type="submit" name="submit" value="Delete">
                 </form>
@@ -53,6 +53,7 @@
 {{ include('partial_view/_footer.html.twig') }}
 
 <script src="https://kit.fontawesome.com/a41dcf7e67.js" crossorigin="anonymous"></script>
+
 </div>
 
 </body>
